--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+<link rel="stylesheet" href="style.css">
+
   <head>
     <meta charset="utf-8">
     <title></title>
@@ -35,6 +37,9 @@
           <li><span class="bold">2009</span> - dies at the age of 95.</li>
         </ul>
       </div>
+      <div name="quote">"Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect, persistence and scientific vision can make to human peace and progress."</div>
+      <p name="reference">-- Indian Prime Minister Manmohan Singh</p>
+      <h2 name="adv">If you have time, you should read more about this incredible human being on his <a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Norman_Borlaug">Wikipedia entry.</a></h2>
     </body>
   </main>
 </html>
