--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <link rel="stylesheet" href="style.css">
-
+<link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2&family=Oswald:wght@600&display=swap" rel="stylesheet">
   <head>
     <meta charset="utf-8">
     <title></title>
@@ -11,13 +11,15 @@
       <h1 id="title">Dr. Norman Borlaug</h1><br>
       <p id="title2">The man who saved a billion lives</p><br>
       <div id="img-div">
-      <img src="photo.jpg"id="img-caption" alt="photo-img" >
+
+      <img src="photo2.jpg"id="bg" atl"photo-img">
+        <p id="p1">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</p><br>
       </div>
-      <p id="p1">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</p><br>
+
       <div id="tribute-info">
         <h2>Here's a time line of Dr. Borlaug's life:</h2>
       </div>
-      <div class="">
+      <div class="" id="list">
         <ul>
           <li><span class="bold">1914</span> - Born in Cresco, Iowa</li>
           <li><span class="bold">1933</span> - Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known as the "National Youth Administration"</li>
@@ -37,9 +39,9 @@
           <li><span class="bold">2009</span> - dies at the age of 95.</li>
         </ul>
       </div>
-      <div name="quote">"Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect, persistence and scientific vision can make to human peace and progress."</div>
-      <p name="reference">-- Indian Prime Minister Manmohan Singh</p>
-      <h2 name="adv">If you have time, you should read more about this incredible human being on his <a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Norman_Borlaug">Wikipedia entry.</a></h2>
+      <p id="quote2">"Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect, persistence and scientific vision can make to human peace and progress."</p>
+      <p id="reference">-- Indian Prime Minister Manmohan Singh</p>
+      <h2 id="adv">If you have time, you should read more about this incredible human being on his <a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Norman_Borlaug">Wikipedia entry.</a></h2>
     </body>
   </main>
 </html>
